	evaluated rather than one inferred from the call.

    o	abbreviate(*, dot = TRUE) now only adds a "." where abbreviations
	did happen.

    o	Changing timezones in the POSIXt functions was not working on
	some Linux systems, and this has been corrected.

    o	ks.test() in package ctest had numerical problems in the lower
	tail of the asymptotic distribution (PR#2571).



	**************************************************
	*						 *
	*	       1.6 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.6.2


BUG FIXES

    o	plot.stepfun() now obeys a `ylim=.' specification.

    o	removeClass() does a better job of removing inheritance
	information.

    o	setIs() will not allow mismatched representations between two
	classes (without an explicit coerce method).

    o	The code underlying polygon drawing contained a memory leak.
	This showed up in persp, but did not affect other graphics
	functions.  It is now possible to draw big DEMs.

    o	logLik.nls() gave wrong df. (PR#2295)

    o	rbind() with a mixture of data frames and matrices treated the
	matrices as vectors. (PR#2266)

    o	stripchart(method="stack") was not handling missing values. (PR#2018)

    o	Arithmetic functions such as log() lost the object bit from
	classed objects if coercion was needed. (PR#2315)

    o	exp_rand would go into an infinite loop if unif_rand returned 0.

    o	formatC(x, format="fg") could return exponential format if
	rounding pushed x over a positive power of 10. (PR#2299)

    o	attr(x, foo) used partial matching for `foo' (even though not
	documented to do so), and failed to find `foo' if there were
	two or more partial matches before the exact match in the list
	of attributes.

    o	Rdconv now creates direct HTML hyperlinks when linking to
	documentation in the same package.  The code now ensures that
	links which can be resolved within the package are so resolved,